maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:28: error: method quitterMur has return statement; needs result type
  if ((sommeAngle == 0) && (allerN())) {return true}
                                        ^Escaper:29: error: method quitterMur has return statement; needs result type
  else if (estSurBiscuit()) {return true}
                             ^